--- a/ScriptureJournal/Scriptures.cshtml
+++ b/ScriptureJournal/Scriptures.cshtml
@@ -52,8 +52,8 @@
                       grid.Column(format: @<a href="~/EditScripture?id=@item.Id">Edit</a>),
                           grid.Column("Date"),
                           grid.Column("Book"),
-                          grid.Column("Location"),
-                          grid.Column("Scripture"),
+                          grid.Column("Location", canSort:false),
+                          grid.Column("Scripture", canSort: false),
                           grid.Column(format: @<a href="~/DeleteScripture?id=@item.ID">Delete</a>)))
 
 </div>
