--- a/ScriptureJournal/_Layout.cshtml
+++ b/ScriptureJournal/_Layout.cshtml
@@ -3,6 +3,10 @@
 <head>
     <title>@Page.Title</title>
     <link href="~/Styles/Scriptures.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+          crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Lato|Oswald|Slabo+27px" rel="stylesheet">
 </head>
 <body>
     <div id="container">
@@ -18,3 +22,4 @@
     </div>
 </body>
 </html>
+
